tests/success/break_in_a_for.tig
for i := 1 to 10 do
    if i <= 5 then
        print("This should be printed 5 times.\n")
    else
        break
