tests/fail/for_non_valued_upper.tig
for i := 1 to () do i
